--- a/css/main.css
+++ b/css/main.css
@@ -410,3 +410,33 @@ a:hover {
     font-weight: 500;
     line-height: 1.1;
 }
+
+
+/*Scroll to top block's style*/
+
+.scroll-top {
+    bottom: 0;
+    right: 10px;
+    position: fixed;
+    height: 30px;
+    width: 30px;
+    background-color: #070707;
+    color:white;
+    line-height: 30px;
+    text-align: center;
+    display: none;
+    z-index: 9999;
+    -webkit-transition: height 0.5s ease-in 0s;
+    -moz-transition: height 0.5s ease-in 0s;
+    -o-transition: height 0.5s ease-in 0s;
+    transition: height 0.5s ease-in 0s;
+}
+
+.scroll-top:hover{
+    color:white;
+    height: 50px;
+    -webkit-transition: height 0.5s ease-in 0s;
+    -moz-transition: height 0.5s ease-in 0s;
+    -o-transition: height 0.5s ease-in 0s;
+    transition: height 0.5s ease-in 0s;
+}
