--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,14 @@ a:hover {
     position: relative;
 }
 
+.timeline-item-date {
+    margin-top: 25px;
+    width: 100px;
+    float: left;
+    /*font-family: PT Sans;*/
+    font-size: 16px;
+}
+
 .timeline-item-trigger {
     margin: 13px 12px 0 4px;
     background: #3bc2c8;
