--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,7 @@ a:hover {
 }
 
 
-/*Project-timeline style*/
+/*Projects-timeline style*/
 
 .timeline {
     background: rgba(0, 0, 0, 0) url("../img/line.png") repeat-y scroll 126px 0;
