--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,7 @@ a:hover {
     line-height: 40px;
     border-radius: 25px;
     text-align: center;
-    background-color: #2914e0;
+    background-color: #b31147;
     color: #ffffff;
 }
 
